# dongle

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.cmd  flash.cmd  prj.conf  sysbuild.cmake  west.yml
.github/workflows/: release.yml
boards/: nrf54h20dk_nrf54h20_cpuapp.overlay  nrf54h20dk_nrf54h20_cpurad.conf  nrf54h20dk_nrf54h20_cpurad.overlay
include/: dongle_ipc.h
radio/: CMakeLists.txt  prj.conf
radio/boards/: nrf54h20dk_nrf54h20_cpurad.conf  nrf54h20dk_nrf54h20_cpurad.overlay
radio/src/: main.c
scripts/: ncs-env.cmd
src/: main.c
usb/: usb_hid.c  usb_hid.h  usb_hid_report.h
